@@ -6,7 +6,7 @@
 
     <groupId>de.holisticon</groupId>
     <artifactId>kotlin-example-coroutines</artifactId>
-    <version>1.0.12</version>
+    <version>1.0.13</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -256,6 +256,10 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <configuration>
                     <jvmTarget>11</jvmTarget>
+                    <javacOptions>
+                        <option>--add-opens</option>
+                        <option>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</option>
+                    </javacOptions>
                 </configuration>
                 <executions>
                     <execution>
@@ -349,6 +353,8 @@
                         <arg>java.management/sun.management=ALL-UNNAMED</arg>
                         <arg>--add-opens</arg>
                         <arg>jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
                 <executions>
